--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Notes</h1>
+        <button>Create Notes</button>
+    </div>
 
     <script src="./script.js"></script>
 </body>
